--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation "androidx.compose.foundation:foundation:1.7.0"
     implementation "androidx.compose.material3:material3:1.3.0"
     implementation "androidx.compose.material:material-icons-extended:1.7.0"
+    implementation "androidx.compose.material:material:1.7.0"
 
     implementation "androidx.navigation:navigation-compose:2.8.0"
 
@@ -60,4 +61,13 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences-core:1.1.1"
     implementation "com.google.android.material:material:1.12.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1"
+
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.8.1"
+
+    androidTestImplementation "androidx.test.ext:junit:1.1.5"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
+    androidTestImplementation "androidx.test:core:1.5.0"
+    androidTestImplementation "androidx.room:room-testing:2.6.1"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.8.1"
 }
